// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scraper utils sorts case names correctly 1`] = `
Array [
  Object {
    "name": "RANGE CONSTRUCTION PTE LTD v GOLDBELL ENGINEERING PTE LTD",
  },
  Object {
    "name": "Lee Tat Development Pte Ltd v Management Corporation of Grange Heights Strata Title No 301 (No 2)",
  },
  Object {
    "name": "Re: Aathar Ah Kong Andrew",
  },
  Object {
    "name": "Aathar Ah Kong Andrew v CIMB Securities (Singapore) Pte Ltd",
  },
  Object {
    "name": "Azman bin Kamis v Saag Oilfield Engineering (S) Pte Ltd (formerly known as Derrick Services Singapore Pte Ltd) and another suit",
  },
]
`;

exports[`scraper utils sorts case names correctly 2`] = `
Array [
  Object {
    "name": "Tribune Investment Trust Inc v Soosan Trading Co Ltd",
  },
  Object {
    "name": "UJF v UJG",
  },
  Object {
    "name": "Lee Tat Development Pte Ltd v Management Corporation of Grange Heights Strata Title No 301 (No 2)",
  },
  Object {
    "name": "Azman bin Kamis v Saag Oilfield Engineering (S) Pte Ltd (formerly known as Derrick Services Singapore Pte Ltd) and another suit",
  },
]
`;
